@@ -219,8 +219,8 @@ class UFWCommandRule(UFWCommand):
                     err_msg = _("Bad port")
                     raise UFWError(err_msg)
 
-            # Don't specify a port with ipv6, esp or ah protocols
-            if rule.protocol in [ 'ipv6', 'esp', 'ah' ]:
+            # Don't specify a port with ipv6, esp, ah or igmp protocols
+            if rule.protocol in [ 'ipv6', 'esp', 'ah', 'igmp' ]:
                 err_msg = _("Invalid port with protocol '%s'") % \
                             (rule.protocol)
                 raise UFWError(err_msg)
@@ -424,9 +424,9 @@ class UFWCommandRule(UFWCommand):
                         % (rule.protocol)
             raise UFWError(err_msg)
 
-        if rule.protocol == 'ipv6':
+        if rule.protocol in ['ipv6', 'igmp']:
             if type == "v6":
-                # Can't use protocol ipv6 with v6 addresses
+                # Can't use protocol these protocols with v6 addresses
                 err_msg = _("Invalid IPv6 address with protocol '%s'") % \
                             (rule.protocol)
                 raise UFWError(err_msg)
@@ -435,8 +435,8 @@ class UFWCommandRule(UFWCommand):
                       (rule.protocol))
                 type = "v4"
 
-        # Don't specify a port with ipv6, esp, or ah protocol
-        if rule.protocol in [ 'ipv6', 'esp', 'ah' ]:
+        # Don't specify a port with ipv6, esp, ah or igmp protocols
+        if rule.protocol in [ 'ipv6', 'esp', 'ah', 'igmp' ]:
             if rule.dport != "any" or rule.sport != "any":
                 err_msg = _("Invalid port with protocol '%s'") % \
                             (rule.protocol)
