@@ -54,8 +54,9 @@ ufw (0.34) UNRELEASED; urgency=low
   * doc/systemd.example: add service file from Ubuntu (LP: #1341083)
   * correctly spell qBittorrent (LP: #1273965)
   * update man page for app rules (LP: #1155292)
+  * support igmp protocol (LP: #946322)
 
- -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 17 Jul 2015 09:28:51 -0500
+ -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 17 Jul 2015 17:12:43 -0500
 
 ufw (0.33) RELEASED; urgency=low
 
